<resources>
    <string name="app_name">OnlineRadio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_favorite_fragment">Hello favorite fragment</string>
    <string name="hello_random_fragment">Hello random fragment</string>
    <string name="title_home">Home</string>
    <string name="random">Random</string>
    <string name="favorite">Favorite</string>
    <string name="hello_settings_fragment">Hello settings fragment</string>
    <string name="settings">Settings</string>
    <string name="balance">Balance</string>
    <string name="notification">Notofication</string>
    <string name="coin_desc">You balance can use add radio in favorite.</string>
    <string name="all_notification">All notification</string>
    <string name="rewarded">Rewarded</string>
    <string name="user_balance">Balance: %1$d</string>
    <string name="search">Min 2 letter</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="label_next">Next</string>
    <string name="label_previous">Previous</string>
    <string name="label_stop">Stop</string>
    <string name="label_play_pause">Play and pause toggle</string>
    <string name="not_network_hint">Network is not available. \n Please check it.</string>
    <string name="label_error">Something went wrong, please try again</string>
    <string name="button_retry">Retry</string>
    <string name="error">Error</string>
    <string name="try_again">Try again</string>

</resources>
