<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.onlinestation.entities.responcemodels.OwnerUserBalance" />
        <import type="com.onlinestation.utils.Constants" />
        <variable
            name="viewModel"
            type="com.onlinestation.fragment.settings.viewmodel.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.settings.SettingsFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/globalSettings"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_15"
            android:paddingEnd="@dimen/dp_0"
            android:text="@string/balance"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_17"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/coinDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/coin_desc"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/globalSettings" />

        <View
            android:id="@+id/line"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@color/colorBackgroundGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coinDesc" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/userBalance"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_10"
            android:gravity="center_vertical"
            android:text="@{String.valueOf(viewModel.balanceCountDataLD.balance)}"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_17"
            app:layout_constraintBottom_toBottomOf="@+id/addCoinContainer"
            app:layout_constraintEnd_toStartOf="@+id/addCoinContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coinDesc" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addCoinContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"
            android:background="@drawable/border_get_coins_button"
            android:onClick="@{() -> viewModel.updateBalance(Constants.defaultUserID,Constants.defaultUserBalanceCount)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coinDesc">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:background="@drawable/ic_play_arrow_white_24dp"
                android:textSize="@dimen/sp_17"
                app:layout_constraintBottom_toTopOf="@+id/addCoin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/addCoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_5"
                android:gravity="center_vertical"
                android:text="@string/rewarded"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_12"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/notification"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_0"
            android:text="@string/notification"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_17"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userBalance" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/enableNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/all_notification"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

